--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/windows,java
+# End of https://www.toptal.com/developers/gitignore/api/windows,java/
